feat: 瀹屾垚AI灏忓姪鎵嬪姛鑳姐€佺櫥褰曟敞鍐屽姛鑳斤紙鎵嬫満鍙?楠岃瘉鐮侊級銆佸晢搴楅〉闈㈡牸寮忎慨澶? - 瀹屽杽AI灏忓姪鎵嬶細闆嗘垚DeepSeek API锛屾敮鎸佸晢鍝佹帹鑽愶紝缁熶竴UI涓婚鑹?- 瀹炵幇鎵嬫満鍙?楠岃瘉鐮佺櫥褰曟敞鍐屽姛鑳斤紝鏀寔楠岃瘉鐮佸彂閫佸拰鍊掕鏃?- 淇鍟嗗簵椤甸潰鏍煎紡闂锛屼紭鍖栧晢鍝佸垪琛ㄥ竷灞€ - 淇缃戠粶璇锋眰閰嶇疆锛屾敮鎸佺湡鏈鸿皟璇?- 娣诲姞鏈櫥褰曡嚜鍔ㄨ烦杞櫥褰曢〉鍔熻兘 - 淇鍚庣缂栬瘧閿欒锛圠ist.of()鍏煎鎬ч棶棰橈級